--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pycodestyle==2.12.1
 pydocstyle==6.3.0
 pyflakes==3.2.0
 pygments==2.19.1
+python-decouple==3.8
 setuptools==75.8.0
 snowballstemmer==2.2.0
 sqlparse==0.5.3
